Puliendo fragment_home

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,15 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.ui.fragmens.HomeFragment">
+    tools:context=".view.ui.fragments.HomeFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
@@ -43,6 +43,10 @@
                         android:textColor="@color/primaryTextColor"
                         android:gravity="fill_horizontal"
                         android:layout_margin="@dimen/defaultLayoutMargin"></TextView>
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="450dp"
+                        android:src="@drawable/image_home"/>
 
                 </LinearLayout>
 
