--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,6 +28,7 @@
                     android:orientation="vertical">
 
                     <ImageView
+                        android:id="@+id/logo"
                         android:layout_width="match_parent"
                         android:layout_height="151dp"
                         android:layout_margin="@dimen/defaultLayoutMargin"
@@ -39,6 +40,15 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/textHome"
+                        android:textSize="@dimen/textSizeContent"
+                        android:textColor="@color/primaryTextColor"
+                        android:gravity="fill_horizontal"
+                        android:layout_margin="@dimen/defaultLayoutMargin"></TextView>
+
+                    <TextView
+                        android:id="@+id/HomeText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:textSize="@dimen/textSizeContent"
                         android:textColor="@color/primaryTextColor"
                         android:gravity="fill_horizontal"
